--- a/public/static/index.html
+++ b/public/static/index.html
@@ -12,6 +12,8 @@
   <header>
     <h1>Weather Forecast Application</h1>
     <p>Rexburg, Idaho Current Weather and 3-Day Forecast</p>
+
+    <a href="../dist/index.html">Home</a>
   </header>
 
   <div id="weather-container">
@@ -27,6 +29,7 @@
       <h3>3-Day Weather Forecast</h3>
       <div class="forecast">
         <!-- Forecasts will be populated here -->
+
       </div>
     </div>
   </div>
@@ -38,6 +41,7 @@
   <!-- Script Files -->
   <script src="/dist/currentweather.js" type="module"></script>
   <script src="/dist/forecast.js" type="module"></script>
+  <script src="../static/TESTING.js"></script>
 </body>
 
 </html>
