update made to program to locate the converted js files

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -12,8 +12,6 @@
   <header>
     <h1>Weather Forecast Application</h1>
     <p>Rexburg, Idaho Current Weather and 3-Day Forecast</p>
-
-    <a href="../dist/index.html">Home</a>
   </header>
 
   <div id="weather-container">
@@ -38,10 +36,17 @@
     <p>&copy; 2025 Weather App. All rights reserved.</p>
   </footer>
 
-  <!-- Script Files -->
+
   <script src="/dist/currentweather.js" type="module"></script>
-  <script src="/dist/forecast.js" type="module"></script>
-  <script src="../static/TESTING.js"></script>
+  <script src="/dist/forecast.js" type="module"></script> 
+
+
+
+
+
+
+
+  <!-- <script src="../static/TESTING.js"></script> -->
 </body>
 
 </html>
